feat: 添加 NativeWind 支持并初始化项目结构
添加 NativeWind 相关配置文件和依赖，包括：
- 添加 NativeWind 类型定义文件
- 配置 Babel 和 Metro 以支持 NativeWind
- 创建全局样式文件和 Tailwind 配置
- 添加工具函数和图标组件
- 更新项目结构和 README 说明

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "jsx": "react-jsx",
     "target": "esnext",
     "module": "esnext",
-    "lib": ["esnext"],
+    "lib": [
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "noEmit": true,
@@ -12,8 +14,27 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "types": ["react", "react-native", "expo"]
+    "types": [
+      "react",
+      "react-native",
+      "expo"
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "src/*"
+      ]
+    }
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
+    "src/env.d.ts",
+    "nativewind-env.d.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
