--- a/package.json
+++ b/package.json
@@ -12,10 +12,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "~54.0.27",
     "expo-status-bar": "~3.0.9",
+    "lucide-react-native": "^0.556.0",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-css-interop": "^0.2.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.18"
   },
   "private": true,
   "devDependencies": {
