--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,14 @@
   "singleQuote": true,
   "semi": false,
   "trailingComma": "es5",
-  "printWidth": 100
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "jsxSingleQuote": false,
+  "quoteProps": "as-needed",
+  "proseWrap": "preserve"
 }
