--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,7 @@
     "jsx": "react-jsx",
     "target": "esnext",
     "module": "esnext",
-    "lib": [
-      "esnext"
-    ],
+    "lib": ["esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "noEmit": true,
@@ -14,27 +12,24 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "types": [
-      "react",
-      "react-native",
-      "expo"
-    ],
+    "types": ["react", "react-native", "expo"],
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "src/*"
-      ]
-    }
+      "~/*": ["src/*"]
+    },
+    // Strict Type Checking Options
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "forceConsistentCasingInFileNames": true,
+    // Additional Checks
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.js",
-    "**/*.jsx",
-    "src/env.d.ts",
-    "nativewind-env.d.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "src/env.d.ts", "nativewind-env.d.ts"],
+  "exclude": ["node_modules"]
 }
