--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/types": "^1.2.0",
+    "@tanstack/react-router": "^1.141.1",
     "babel-preset-expo": "~54.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,7 +32,8 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
+    "tailwindcss-animate": "^1.0.7"
   },
   "private": true,
   "devDependencies": {
