--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/types": "^1.2.0",
     "@tanstack/react-router": "^1.141.1",
@@ -20,7 +21,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~54.0.27",
+    "expo-linear-gradient": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "lucide-react": "^0.561.0",
     "lucide-react-native": "^0.556.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
