--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/types": "^1.2.0",
+    "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-router": "^1.141.1",
+    "axios": "^1.13.2",
     "babel-preset-expo": "~54.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
