--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/types": "^1.2.0",
@@ -36,9 +37,11 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
+    "sonner-native": "^0.22.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.18",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.9"
   },
   "private": true,
   "devDependencies": {
