--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-expo": "~54.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.27",
     "expo-linear-gradient": "^15.0.8",
     "expo-status-bar": "~3.0.9",
