--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-router": "^1.141.1",
     "axios": "^1.13.2",
-    "babel-preset-expo": "~54.0.0",
+    "babel-preset-expo": "~54.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.27",
+    "expo": "~54.0.30",
     "expo-linear-gradient": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "lucide-react": "^0.561.0",
@@ -34,10 +34,12 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-css-interop": "^0.2.1",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "sonner-native": "^0.22.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.18",
