--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "~54.0.30",
+    "expo-constants": "~18.0.12",
     "expo-linear-gradient": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "lucide-react": "^0.561.0",
