--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rn-app",
   "version": "1.0.0",
-  "main": "index.tsx",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "typecheck": "tsc --noEmit",
@@ -25,8 +25,12 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "~54.0.30",
-    "expo-constants": "~18.0.12",
+    "expo-constants": "~18.0.13",
+    "expo-font": "~14.0.10",
     "expo-linear-gradient": "^15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.21",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "lucide-react": "^0.561.0",
     "lucide-react-native": "^0.556.0",
@@ -37,7 +41,8 @@
     "react-native-css-interop": "^0.2.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "4.1.1",
-    "react-native-safe-area-context": "^5.6.2",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
