--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "~54.0.30",
+    "expo-blur": "^15.0.8",
     "expo-constants": "~18.0.13",
+    "expo-dev-client": "^6.0.20",
     "expo-font": "~14.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.11",
