--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@callstack/liquid-glass": "^0.7.0",
     "@expo/metro-runtime": "~6.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@rn-primitives/label": "^1.2.0",
